# CodeBlocPP

./: CMakeLists.txt  main.cpp  mainview.cpp  mainview.h  mainview.ui  temp.cpp
backend/: command.h  compiler.cpp  compiler.h  compilervalidator.cpp  compilervalidator.h  variable.cpp  variable.h
backend/commands/: ifcommand.cpp  ifcommand.h  jumpcommand.cpp  jumpcommand.h  operationcommand.cpp  operationcommand.h  writecommand.cpp  writecommand.h
frontend/: commandview.cpp  commandview.h  dynamicvariable.cpp  dynamicvariable.h  outputview.cpp  outputview.h  variableview.cpp  variableview.h
frontend/commands/: ifcommandview.cpp  ifcommandview.h  jumpcommandview.cpp  jumpcommandview.h  operationcommandview.cpp  operationcommandview.h  writecommandview.cpp  writecommandview.h
